# AICore

./: .gitignore  README.md  docker-compose.yml  gateway_init_.py  pyproject.toml  run.ps1
.runtime/plans/: 01e50d00082a7952.json  068a20b3b3c6ec8e.json  12256c8194b8fc5d.json  196cc561ed119e25.json  4962d454b947d66a.json  83800cc76294a420.json  8af2903bb8a48c9d.json  963926789fb08bcb.json  9dd1df9322577ef0.json  a1f8606133a42d4f.json  a8c3a8c167465ff9.json  ac0ef0062837416d.json  ac674d7cd2d878f8.json  c065f756fb1f4cd0.json  d124917a832c416e.json  f6d3cb7389eb533e.json  f7c6f43bd50b3c32.json  m2_1765643151272.json  testplan.json
config/: agents.yaml  models.yaml  providers.yaml  rag.yaml  services.yaml  settings.yaml  strategies.json  strategies.yaml  system_prompts.yaml  tools.yaml
core/: __init__.py  cli.py  test_agent_flow.py  test_cross_memory.py  test_graph_engine.py  test_phase6_self_improvement.py  test_phase7_tools.py  test_phase8_benchmarks.py  test_phase9_policy.py  test_planner.py  test_rag.py  test_smoke.py  test_tool_autodetect.py
docs/: MASTERPLAN_SUPERVISOR.md  MASTERPLAN_USER.md  OPS_GATEWAY.md  OPS_KERNEL.md  SUPERVISOR_WORKFLOW.md  aicore_reference.json  api_reference.md  readme.md  system_architecture_diagram.md
gateway/: Dockerfile  __init__.py  gateway.py  main.py  schemas.py
logs/: gateway_requests.jsonl
models/: model_config.json
ops/: gate.ps1  harden_service.ps1  install_service.ps1  kernel_gate.py  rotate_gateway_logs.ps1
ui/: agents.py  chat.py  dashboards.py  developer.py  index.html  main.py  memory.py  tools.py  workflows.py
(+141 files in other folders)
